# UniversalCodeLab

./: README.md
ai/pytorch/: lesson1_intro.py  lesson2_plot.py  lesson3_neural_net_xor.py
ai/tensorflow/: lesson1_keras_handwritten.py
live_coding/: merge_arrays.cpp  palindrome.cpp  palindrome.py  reverse_string.cpp  two_sum.cpp
openssl/: CheatSheet.md  ca_config.cnf  create_tls_pki_suite.sh
python/: async_experiments.py  notes.md  qrequest_experiments.py  test.py  thread_experiments.py  venv.md
python/sci/: 1.pyplot.demo.py  2.fourier.py
rust/: Cargo.toml  build.rs  struct_initialization.md
rust/experiment_project/src/: main.rs  trees.rs
rust/experiment_project/src/cookbook/: cb_10_encoding.rs  cb_11_error_handling.rs  cb_12_filesystem.rs  cb_15_network.rs  cb_1_algorithms.rs  cb_4_concurrency.rs  cb_5_cryptography.rs  cb_7_database.rs  cb_9_cpp.rs  mod.rs
rust/experiment_project/src/core/: iterators.rs  main.rs  mod.rs
rust/src/: foo.cpp  hello.c  main.rs  string_manip.rs
rust/src/cookbook/: cb_13_hardware.rs  cb_14_mem_management.rs  cb_16_os.rs  cb_17_science.rs  cb_18_text.rs  cb_19_web_programming.rs  cb_2_command_line.rs  cb_3_tarball.rs  cb_6_data_structures.rs  cb_8_date_time.rs  cb_9_dev_tools_logging.rs
